fix jumps meter

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -41,6 +41,8 @@ body
     right: 0
     display: flex
     flex-direction: row-reverse
+    align-items: center
+    height: 200px
     &__title
         writing-mode: vertical-rl
         padding: 1rem
